@@ -10,15 +10,11 @@ To use:
 This generates a basic user model, a controller, some basic views, and tests.  Extra functionality can be unlocked by
 removing the comments for them.  I have a few examples such as user activation and reversible encrypted passwords.
 
-Two more generators are provided...
+The user migration is also generated unless you pass --skip-migration.
 
 Generate your mailer:
 
   ./script/generate authenticated_mailer user
-
-Generate a new migration for the user model:
-
-  ./script/generate authenticated_migration add_authenticated_table
 
 Consult the Acts As Authenticated wiki for more: http://technoweenie.stikipad.com/plugins/show/Acts+as+Authenticated
    
