@@ -1,14 +1,0 @@
-Description:
-    The authenticated migration generator creates a migration for your authenticated user model.
-
-    The generator takes a migration name as its argument.  The migration name may be
-    given in CamelCase or under_score.  'add_authenticated_table' is the default.
-
-    The generator creates a migration class in db/migrate prefixed by its number
-    in the queue.
-
-Example:
-    ./script/generate authenticated_migration add_authenticated_table
-
-    With 4 existing migrations, this will create an AddAuthenticatedTable migration in the
-    file db/migrate/5_add_authenticated_table.rb
